# bidirectional-grpc

./: Makefile  README.md
golang-grpc/: go.mod  go.sum
golang-grpc/client/: main.go
golang-grpc/proto/: pingpong.pb.go  pingpong_grpc.pb.go
golang-grpc/server/: main.go
proto/: pingpong.proto
rust-grpc/: Cargo.toml  build.rs
rust-grpc/proto/: echo_streaming.proto  echo_unary.proto
rust-grpc/src/: client.rs  echo_streaming.rs  echo_unary.rs  pingpong.rs  server.rs
rust-grpc/src/streaming/: client.rs  server.rs
rust-grpc/src/unary/: client.rs  server.rs
