[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = {version = "1.21.2", features = ["rt-multi-thread"]}
tokio-stream = "0.1.10"
futures = "0.3.24"
tonic = "0.8.2"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.2"